# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is the API documentation for Vaultex, a secure vault application.",
-        "title": "Vaultex API",
+        "description": "A Ledger-as-a-Service API. Platforms integrate Vaultex to manage their users' wallets and track every financial transaction via double-entry bookkeeping.",
+        "title": "Vaultex",
         "contact": {
             "name": "API Support",
             "url": "https://github.com/michaelkinginfosec",
@@ -11,39 +11,9 @@
         "version": "1.0"
     },
     "paths": {
-        "/users": {
-            "get": {
-                "description": "Retrieve a list of all users",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/dto.UserResponse"
-                            }
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    }
-                }
-            },
+        "/organizations": {
             "post": {
-                "description": "Create a new user with the provided name and email",
+                "description": "Create a new organization with the provided name and email",
                 "consumes": [
                     "application/json"
                 ],
@@ -53,15 +23,15 @@
                 "tags": [
                     "Auth"
                 ],
-                "summary": "Create a new user",
+                "summary": "Create a new organization",
                 "parameters": [
                     {
-                        "description": "User data",
-                        "name": "user",
+                        "description": "Organization data",
+                        "name": "organization",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.CreateUserRequest"
+                            "$ref": "#/definitions/dto.CreateOrganizationRequest"
                         }
                     }
                 ],
@@ -69,7 +39,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
+                            "$ref": "#/definitions/dto.OrganizationSignupResponse"
                         }
                     },
                     "400": {
@@ -93,9 +63,9 @@
                 }
             }
         },
-        "/users/email": {
+        "/organizations/email/{email}": {
             "get": {
-                "description": "Retrieve a user by their email address",
+                "description": "Retrieve an organization by their email address",
                 "consumes": [
                     "application/json"
                 ],
@@ -103,15 +73,15 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "organizations"
                 ],
-                "summary": "Get user by email",
+                "summary": "Get organization by email",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "User Email",
+                        "description": "Organization Email",
                         "name": "email",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -119,7 +89,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
+                            "$ref": "#/definitions/dto.OrganizationLoginResponse"
                         }
                     },
                     "404": {
@@ -137,9 +107,9 @@
                 }
             }
         },
-        "/users/{id}": {
-            "get": {
-                "description": "Retrieve a user by their unique ID",
+        "/organizations/login": {
+            "post": {
+                "description": "Authenticate an organization using their email and password",
                 "consumes": [
                     "application/json"
                 ],
@@ -147,66 +117,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Auth"
                 ],
-                "summary": "Get user by ID",
+                "summary": "Login an organization",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "put": {
-                "description": "Update a user's name and email by their unique ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Update user by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Updated user data",
-                        "name": "user",
+                        "description": "Login credentials",
+                        "name": "credentials",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateUserRequest"
+                            "$ref": "#/definitions/dto.LoginRequest"
                         }
                     }
                 ],
@@ -214,7 +135,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.UserResponse"
+                            "$ref": "#/definitions/dto.OrganizationLoginResponse"
                         }
                     },
                     "400": {
@@ -223,47 +144,8 @@
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "description": "Delete a user by their unique ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Delete user by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "No Content"
-                    },
-                    "404": {
-                        "description": "Not Found",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -279,17 +161,33 @@
         }
     },
     "definitions": {
-        "dto.CreateUserRequest": {
+        "dto.CreateOrganizationRequest": {
             "type": "object",
             "required": [
                 "email",
-                "name"
+                "organization_name",
+                "password",
+                "phone_number",
+                "registered_name"
             ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "name": {
+                "organization_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 8
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "registered_name": {
+                    "type": "string"
+                },
+                "website_url": {
                     "type": "string"
                 }
             }
@@ -302,27 +200,67 @@
                 }
             }
         },
-        "dto.UpdateUserRequest": {
+        "dto.LoginRequest": {
             "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
             "properties": {
                 "email": {
                     "type": "string"
                 },
-                "name": {
-                    "type": "string"
+                "password": {
+                    "type": "string",
+                    "minLength": 8
                 }
             }
         },
-        "dto.UserResponse": {
+        "dto.OrganizationLoginResponse": {
             "type": "object",
             "properties": {
+                "api_key": {
+                    "type": "string"
+                },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "string"
                 },
-                "name": {
+                "organization_name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "registered_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.OrganizationSignupResponse": {
+            "type": "object",
+            "properties": {
+                "api_key": {
+                    "type": "string"
+                },
+                "api_secret": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "organization_name": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "registered_name": {
                     "type": "string"
                 }
             }
