# internal/handlers/user.go
@@ -1,255 +1,0 @@
-package handlers
-
-import (
-	"net/http"
-	"vaultex/internal/service"
-	"vaultex/pkg/dto"
-
-	"github.com/gin-gonic/gin"
-	"github.com/jackc/pgx/v5/pgconn"
-)
-
-type UserHandler struct {
-	service service.Service
-}
-
-func NewUserHandler(s service.Service) *UserHandler {
-	return &UserHandler{service: s}
-}
-
-// CreateUser godoc
-// @Summary Create a new user
-// @Description Create a new user with the provided name and email
-// @Tags Auth
-// @Accept json
-// @Produce json
-// @Param user body dto.CreateUserRequest true "User data"
-// @Success 201 {object} dto.UserResponse
-// @Failure 400 {object} dto.ErrorResponse
-// @Failure 409 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users [post]
-func (h *UserHandler) CreateUser(c *gin.Context) {
-	var req dto.CreateUserRequest
-
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request payload"})
-		return
-	}
-	ctx := c.Request.Context()
-
-	user, err := h.service.CreateUser(ctx, req.Name, req.Email)
-
-	if err != nil {
-		if pgErr, ok := err.(*pgconn.PgError); ok {
-			if pgErr.Code == "23505" {
-				c.JSON(http.StatusConflict, gin.H{
-					"error": "Email already registered",
-				})
-				return
-			}
-		}
-
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-	res := dto.UserResponse{
-		ID:    user.ID,
-		Name:  user.Name,
-		Email: user.Email,
-	}
-
-	c.JSON(http.StatusCreated, res)
-}
-
-// GetUser godoc
-// @Summary Get user by ID
-// @Description Retrieve a user by their unique ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Success 200 {object} dto.UserResponse
-// @Failure 404 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users/{id} [get]
-func (h *UserHandler) GetUser(c *gin.Context) {
-	id := c.Param("id")
-	ctx := c.Request.Context()
-
-	user, err := h.service.FindUserByID(ctx, id)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
-		return
-	}
-	res := dto.UserResponse{
-		ID:    user.ID,
-		Name:  user.Name,
-		Email: user.Email,
-	}
-
-	c.JSON(http.StatusOK, res)
-}
-
-// FindUserByEmail godoc
-// @Summary Get user by email
-// @Description Retrieve a user by their email address
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param email path string true "User Email"
-// @Success 200 {object} dto.UserResponse
-// @Failure 404 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users/email/{email} [get]
-func (h *UserHandler) FindUserByEmail(c *gin.Context) {
-	email := c.Param("email")
-	ctx := c.Request.Context()
-
-	user, err := h.service.FindUserByEmail(ctx, email)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
-		return
-	}
-	res := dto.UserResponse{
-		ID:    user.ID,
-		Name:  user.Name,
-		Email: user.Email,
-	}
-	c.JSON(http.StatusOK, res)
-}
-
-// GetAllUsers godoc
-// @Summary Get all users
-// @Description Retrieve a list of all users
-// @Tags users
-// @Accept json
-// @Produce json
-// @Success 200 {array} dto.UserResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users [get]
-func (h *UserHandler) GetAllUsers(c *gin.Context) {
-	ctx := c.Request.Context()
-
-	users, err := h.service.FindAllUsers(ctx)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	var res []dto.UserResponse
-	for _, user := range users {
-		res = append(res, dto.UserResponse{
-			ID:    user.ID,
-			Name:  user.Name,
-			Email: user.Email,
-		})
-	}
-
-	c.JSON(http.StatusOK, res)
-}
-
-// UpdateUser godoc
-// @Summary Update user by ID
-// @Description Update a user's name and email by their unique ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Param user body dto.UpdateUserRequest true "Updated user data"
-// @Success 200 {object} dto.UserResponse
-// @Failure 400 {object} dto.ErrorResponse
-// @Failure 404 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users/{id} [put]
-func (h *UserHandler) UpdateUser(c *gin.Context) {
-	id := c.Param("id")
-
-	var req dto.UpdateUserRequest
-
-	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid request payload"})
-		return
-	}
-	ctx := c.Request.Context()
-	if req.Name == nil && req.Email == nil {
-		c.JSON(http.StatusBadRequest, gin.H{"error": "Name or email are required"})
-		return
-	}
-	isExistingingUser, err := h.service.FindUserByID(ctx, id)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if isExistingingUser == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
-		return
-	}
-	name := isExistingingUser.Name
-	if req.Name != nil {
-		name = *req.Name
-	}
-	email := isExistingingUser.Email
-	if req.Email != nil {
-		email = *req.Email
-	}
-	user, err := h.service.UpdateUserById(ctx, id, name, email)
-	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	if user == nil {
-		c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
-		return
-	}
-	res := dto.UserResponse{
-		ID:    user.ID,
-		Name:  user.Name,
-		Email: user.Email,
-	}
-
-	c.JSON(http.StatusOK, res)
-}
-
-// DeleteUser godoc
-// @Summary Delete user by ID
-// @Description Delete a user by their unique ID
-// @Tags users
-// @Accept json
-// @Produce json
-// @Param id path string true "User ID"
-// @Success 204 "No Content"
-// @Failure 404 {object} dto.ErrorResponse
-// @Failure 500 {object} dto.ErrorResponse
-// @Router /users/{id} [delete]
-func (h *UserHandler) DeleteUser(c *gin.Context) {
-	id := c.Param("id")
-	ctx := c.Request.Context()
-
-	err := h.service.DeleteUserById(ctx, id)
-	if err != nil {
-		if err.Error() == "user not found" {
-			c.JSON(http.StatusNotFound, gin.H{"error": "user not found"})
-			return
-		}
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
-		return
-	}
-
-	c.JSON(http.StatusOK, gin.H{
-		"message": "user deleted successfully",
-	})
-
-}
