# pkg/dto/user.go
@@ -1,16 +1,0 @@
-package dto
-
-type CreateUserRequest struct {
-	Name  string `json:"name" binding:"required"`
-	Email string `json:"email" binding:"required,email"`
-}
-type UpdateUserRequest struct {
-	Name  *string `json:"name"`
-	Email *string `json:"email"`
-}
-
-type UserResponse struct {
-	ID    string `json:"id"`
-	Name  string `json:"name"`
-	Email string `json:"email"`
-}
